[project]
name = "tstrprocess"
version = "0.1.0.dev3"
description = "t-string based subprocess invocation"
authors = [
    {name = "Alyssa Coghlan", email = "ncoghlan@gmail.com"},
    {name = "Nick Humrich", email = "nick@humrich.us"},
]
dependencies = ["plumbum>=1.9.0"]
# Actual minimum is 3.14.0b1, but use Python 3.13 for initial PyPI setup
# PEP 750 implementation PR: https://github.com/python/cpython/pull/132662
# Python 3.14 pdm/httpx compat issue: https://github.com/encode/httpx/pull/3556
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/ncoghlan/tstrprocess"
Issues = "https://github.com/ncoghlan/tstrprocess/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
